[package]
name = "ClementineLdr"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]

[dependencies.windows-sys]
version = "0.52.0"
features = ["Win32_Foundation", "Win32_System_Kernel", "Win32_System_Threading",
    "Win32_System_WindowsProgramming","Win32_System_SystemInformation" ,"Win32_System_Diagnostics_Debug",
    "Win32_System_Services", "Win32_System_SystemServices", "Win32_System_SystemInformation"]